// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`If given an appointment with a morning time slot, then match the snapshot 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <span
        className="text-line"
      >
        Wednesday, May 5, 2021, between 8–10 a.m. Pacific time
      </span>
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`If given an appointment with a time slot that has a nonsense time range, then match the snapshot 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <span
        className="text-line"
      >
        Wednesday, May 5, 2021, between 3 p.m. and 9 a.m. Pacific time
      </span>
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`If given an appointment with a time slot that starts in the morning and ends in the afternoon, then match the snapshot 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <span
        className="text-line"
      >
        Wednesday, May 5, 2021, between 8 a.m. and 3 p.m. Pacific time
      </span>
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`If given an appointment with an afternoon time slot, then match the snapshot 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <span
        className="text-line"
      >
        Wednesday, May 5, 2021, between 1–3 p.m. Pacific time
      </span>
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`If given an appointment with no time slot, then match the snapshot 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <span
        className="text-line"
      >
        Wednesday, May 5, 2021
      </span>
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 1 matches when there are weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Will Be Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified an issue that could make you ineligible for benefits. We need to confirm your eligibility in a phone interview.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
        </li>
        <li
          className="next-step"
        >
          Confirm we have your current phone number and mailing address. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Check your mail for the 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800). It will explain the issue and help you prepare for the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will schedule a phone interview to determine your eligibility for benefits. This page will be updated with appointment details once your interview is scheduled.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 1 matches when there are weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Will Be Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified an issue that could make you ineligible for benefits. We need to confirm your eligibility in a phone interview.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
        </li>
        <li
          className="next-step"
        >
          Confirm we have your current phone number and mailing address. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Check your mail for the 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800). It will explain the issue and help you prepare for the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will schedule a phone interview to determine your eligibility for benefits. This page will be updated with appointment details once your interview is scheduled.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 1 matches when there aren't weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Will Be Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified an issue that could make you ineligible for benefits. We need to confirm your eligibility in a phone interview.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number and mailing address. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Check your mail for the 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800). It will explain the issue and help you prepare for the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will schedule a phone interview to determine your eligibility for benefits. This page will be updated with appointment details once your interview is scheduled.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 1 matches when there aren't weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Will Be Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified an issue that could make you ineligible for benefits. We need to confirm your eligibility in a phone interview.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number and mailing address. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Check your mail for the 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800). It will explain the issue and help you prepare for the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will schedule a phone interview to determine your eligibility for benefits. This page will be updated with appointment details once your interview is scheduled.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 2 matches when there are weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <span
        className="text-line"
      >
        Wednesday, May 12, 2021, between 1–3 p.m. Pacific time
      </span>
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
        </li>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 2 matches when there are weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <span
        className="text-line"
      >
        Wednesday, May 12, 2021, between 1–3 p.m. Pacific time
      </span>
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
        </li>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 2 matches when there aren't weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <span
        className="text-line"
      >
        Wednesday, May 12, 2021, between 1–3 p.m. Pacific time
      </span>
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 2 matches when there aren't weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <span
        className="text-line"
      >
        Wednesday, May 12, 2021, between 1–3 p.m. Pacific time
      </span>
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 3 matches when there are weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Under Review
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      Your phone interview time has passed and your eligibility for benefits is under review.
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you missed your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
        </li>
        <li
          className="next-step"
        >
          Allow up to 10 days for the EDD to make a decision.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will determine your eligibility.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 3 matches when there are weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Under Review
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      Your phone interview time has passed and your eligibility for benefits is under review.
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you missed your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
        </li>
        <li
          className="next-step"
        >
          Allow up to 10 days for the EDD to make a decision.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will determine your eligibility.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 3 matches when there aren't weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Under Review
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      Your phone interview time has passed and your eligibility for benefits is under review.
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you missed your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Allow up to 10 days for the EDD to make a decision.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will determine your eligibility.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 3 matches when there aren't weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Under Review
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      Your phone interview time has passed and your eligibility for benefits is under review.
    </div>
    <div
      className=""
    >
      <strong>
        Important
      </strong>
      : If you missed your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Allow up to 10 days for the EDD to make a decision.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will determine your eligibility.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 4 matches when there are weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Review Required
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified an issue and may need to determine your eligibility or verify your information.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
        </li>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
        </li>
        <li
          className="next-step"
        >
          For more information, visit 
          <a
            href="https://www.edd.ca.gov/unemployment/claim-status.htm"
          >
            Claim Status: Pending Payment
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will contact you if we need more information to resolve the issue.
        </li>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 4 matches when there are weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Review Required
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified an issue and may need to determine your eligibility or verify your information.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
        </li>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
        </li>
        <li
          className="next-step"
        >
          For more information, visit 
          <a
            href="https://www.edd.ca.gov/unemployment/claim-status.htm"
          >
            Claim Status: Pending Payment
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will contact you if we need more information to resolve the issue.
        </li>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 4 matches when there aren't weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Review Required
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified an issue and may need to determine your eligibility or verify your information.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
        </li>
        <li
          className="next-step"
        >
          For more information, visit 
          <a
            href="https://www.edd.ca.gov/unemployment/claim-status.htm"
          >
            Claim Status: Pending Payment
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will contact you if we need more information to resolve the issue.
        </li>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 4 matches when there aren't weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Review Required
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      We identified an issue and may need to determine your eligibility or verify your information.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
        </li>
        <li
          className="next-step"
        >
          For more information, visit 
          <a
            href="https://www.edd.ca.gov/unemployment/claim-status.htm"
          >
            Claim Status: Pending Payment
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will contact you if we need more information to resolve the issue.
        </li>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 5 matches, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      No Weeks Available to Certify
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      You currently have no weeks available to certify for benefits.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
        </li>
        <li
          className="next-step"
        >
          If it’s been more than 30 days since you last certified for benefits, you must 
          <a
            href="https://edd.ca.gov/Unemployment/Reopen-A-Claim.htm"
          >
            reopen your claim
          </a>
           before you can certify.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 5 matches, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      No Weeks Available to Certify
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      You currently have no weeks available to certify for benefits.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
        </li>
        <li
          className="next-step"
        >
          If it’s been more than 30 days since you last certified for benefits, you must 
          <a
            href="https://edd.ca.gov/Unemployment/Reopen-A-Claim.htm"
          >
            reopen your claim
          </a>
           before you can certify.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
          >
            certify for benefits
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 6 matches, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Weeks Available to Certify
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      You have weeks available to 
      <a
        href="https://edd.ca.gov/Unemployment/certify.htm"
      >
        certify for benefits
      </a>
      .
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Select 
          <strong>
            Certify for Benefits
          </strong>
           in the Notification section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          When we process your certification, we will update the payment status. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/Public/ExternalUser/UIOnlineLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and select 
          <strong>
            History
          </strong>
           from the main menu.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 6 matches, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Weeks Available to Certify
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className=""
    >
      You have weeks available to 
      <a
        href="https://edd.ca.gov/Unemployment/certify.htm"
      >
        certify for benefits
      </a>
      .
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Select 
          <strong>
            Certify for Benefits
          </strong>
           in the Notification section on your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          .
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          When we process your certification, we will update the payment status. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and select 
          <strong>
            History
          </strong>
           from the main menu.
        </li>
      </ul>
    </div>
  </div>
</div>
`;
